<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_merchant"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="Veltra for Business" />
        <item
            android:id="@+id/nav_services"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/nav_services" />
        <item
            android:id="@+id/nav_support"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/nav_support" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>
