<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:padding="20dp">

    <!-- Header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_cards"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_card"
            android:textColor="@color/veltra_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Digital Card -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/digitalCard"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/wallet_card_gradient"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@id/header">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_veltra_logo"
            app:tint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="Veltra" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@android:drawable/ic_popup_reminder"
            app:tint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="NFC" />

        <TextView
            android:id="@+id/cardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="****  ****  ****  1234"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:letterSpacing="0.1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TOLA ADEBAYO"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:alpha="0.8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VISA"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Card Settings List -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/digitalCard">

        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="24dp">
            <View android:id="@+id/s1_icon" android:layout_width="40dp" android:layout_height="40dp" android:background="@drawable/quick_action_background" />
            <TextView android:id="@+id/s1_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/card_settings" android:textColor="@color/white" android:layout_toEndOf="@id/s1_icon" android:layout_marginStart="16dp" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/manage_card" android:textColor="@color/text_muted" android:textSize="12sp" android:layout_below="@id/s1_title" android:layout_toEndOf="@id/s1_icon" android:layout_marginStart="16dp" />
            <ImageView android:layout_width="20dp" android:layout_height="20dp" android:src="@android:drawable/ic_media_next" android:layout_alignParentEnd="true" android:layout_centerVertical="true" app:tint="@color/text_muted" android:contentDescription="Open" />
        </RelativeLayout>

        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <View android:id="@+id/s2_icon" android:layout_width="40dp" android:layout_height="40dp" android:background="@drawable/quick_action_background" />
            <TextView android:id="@+id/s2_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/transaction_limits" android:textColor="@color/white" android:layout_toEndOf="@id/s2_icon" android:layout_marginStart="16dp" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set_limits" android:textColor="@color/text_muted" android:textSize="12sp" android:layout_below="@id/s2_title" android:layout_toEndOf="@id/s2_icon" android:layout_marginStart="16dp" />
            <ImageView android:layout_width="20dp" android:layout_height="20dp" android:src="@android:drawable/ic_media_next" android:layout_alignParentEnd="true" android:layout_centerVertical="true" app:tint="@color/text_muted" android:contentDescription="Open" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
